--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
             "email": "mario@clancats.com"
         }
     ],
+    "bin": ["bin/pm", "bin/worker"],
     "require": {
+        "symfony/process": "^4.0"
     },
     "autoload": {
         "psr-4": {
