--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
     "require": {
         "symfony/process": "^4.0"
     },
+    "require-dev": {
+        "phpstan/phpstan": "^0.12.47"
+    },
     "autoload": {
         "psr-4": {
         	"Beryllium\\": "src/"
