Fixed phpstan bootstrap

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,4 +2,4 @@ parameters:
     ignoreErrors:
         - '/Method Beryllium\\Driver\\PHPArrayDriver\:\:.*/'
     bootstrapFiles:
-        - bootstrap.php
+        - test-bootstrap.php
