--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     ],
     "bin": [],
     "require": {
-        "symfony/process": "^4.0"
+        "symfony/process": "^4.0",
+        "phpunit/phpunit": "^9.5"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.47"
