--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,11 @@
     ],
     "bin": [],
     "require": {
-        "symfony/process": "^4.0",
-        "phpunit/phpunit": "^9.5"
+        "symfony/process": "^5.4"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.12.47"
+        "phpstan/phpstan": "^1.5",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
