--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,18 @@
         "phpstan/phpstan": "^1.7.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://repos-php.cineman.ch",
+            "options":  { "http": {
+                "header": [ "X-Access-Token: BBvDcoQjBCC4MCN8YBZyzPwbZqUZfKLnHvv8ZQVp4RwVDr6dyMuaTYLCBiyBRUmT" ]
+            }}
+        }
+    ],
     "autoload": {
         "psr-4": {
-        	"Beryllium\\": "src/"
+            "Beryllium\\": "src/"
         }
     },
     "autoload-dev": {
